# rust-filestore

./: .gitignore  Cargo.toml  docker-compose.yaml
migrations/: 1_init.sql  20250307193816_users.sql  2_organizations.sql  3_media.sql  4_users.sql
src/: config.rs  context.rs  db.rs  lib.rs  main.rs
src/data/: media.rs  organizations.rs  users.rs
src/domain/: media.rs  mod.rs  organization.rs  organizations.rs  users.rs
src/http/: media.rs  mod.rs  organization.rs  user.rs
src/services/: db.rs  gcs.rs  mod.rs
