[package]
name = "file_store_with_metadata"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "uuid",
    "time",
    "macros"]}
anyhow = "1.0"
clap = { version = "4.5.31", features = ["derive", "env"] }
dotenvy = "0.15.7"
axum = "0.8.1"
tokio = { version = "1.43.0", features = ["full"] }
google-cloud-storage = "0.24.0"
async-trait = "0.1.87"
uuid = { version = "1.15.1", features = ["v4", "serde"] }
serde = "1.0.218"
thiserror = "2.0.12"
tracing = "0.1.41"
axum-macros = "0.5.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt", "std"] }
